--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <version>2.2.6.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.ziffer</groupId>
+    <groupId>com.g16</groupId>
     <artifactId>healthpay</artifactId>
     <version>0.1</version>
     <name>questionnaire</name>
