数据库表建立完成，使用mybatis生成dao,model和xml

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>com.g16</groupId>
     <artifactId>healthpay</artifactId>
     <version>0.1</version>
-    <name>questionnaire</name>
+    <name>healthpay</name>
     <description>The back end of "B/S" course final project for Spring Boot</description>
 
     <properties>
