验证码服务

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,16 @@ spring.redis.port=2020
 #spring.email.username=937427981@qq.com
 #spring.email.password=vkyppkpwpvewbcaa
 
+#短信服务配置
+spring.captcha.codes=1234567890
+spring.sms.template-code=SMS_195575339
+spring.sms.sign-name=
+spring.sms.product=Dysmsapi
+spring.sms.domain=dysmsapi.aliyuncs.com
+spring.sms.access-key-id=LTAI4GFMWtT6XdWRf2W2rMVC
+spring.sms.access-key-secret=ns8kLPrmCAegvwoRNnKySspwuEGuBa
+
+
 spring.authorize.salt=@(!($(317zfer010djlsf16if
 #session生命周期
 server.servlet.session.timeout=30m
