发送验证码完成

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,9 @@ server.port=8080
 
 #编码格式
 server.tomcat.uri-encoding=utf-8
-
+spring.http.encoding.force=true
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
 #数据库配置
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://47.94.46.115:3306/healthpay
@@ -28,11 +30,10 @@ spring.redis.port=2020
 #短信服务配置
 spring.captcha.codes=1234567890
 spring.sms.template-code=SMS_195575339
-spring.sms.sign-name=
 spring.sms.product=Dysmsapi
 spring.sms.domain=dysmsapi.aliyuncs.com
-spring.sms.access-key-id=LTAI4G8Fqmn7FkfURMkY3Gsx
-spring.sms.access-key-secret=lOa00LmAjUisp6d4HDL126nzaMBKHe
+spring.sms.access-key-id=LTAI4GFMWtT6XdWRf2W2rMVC
+spring.sms.access-key-secret=ns8kLPrmCAegvwoRNnKySspwuEGuBa
 
 
 spring.authorize.salt=@(!($(317zfer010djlsf16if
